# SolalexBeta

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  repository.yaml
.claude/: settings.json
backend/: README.md  pyproject.toml
backend/src/solalex/: __init__.py  battery_pool.py  config.py  controller.py  main.py  startup.py  state_cache.py
backend/tests/: conftest.py
backend/tests/integration/: test_commission.py  test_devices_api.py  test_devices_put.py  test_ha_client_reconnect.py  test_setup_entities.py  test_setup_entity_state.py  test_setup_test.py
backend/tests/unit/: _controller_helpers.py  test_adapters.py  test_api_devices_patch_config.py  test_battery_config_route.py  test_battery_pool.py  test_common_logging.py  test_config.py  test_control_cycles_repo.py  test_control_mode_route.py  test_control_state.py  test_controller_dispatch.py  test_controller_drossel_policy.py  test_controller_invert_sign.py  test_controller_mode_propagation.py  test_controller_mode_selector.py  test_controller_mode_switch.py  test_controller_mode_switch_export.py  test_controller_multi_export.py  test_controller_multi_policy.py  test_controller_night_discharge.py  test_controller_policy_export.py  test_controller_reload.py  test_controller_speicher_policy.py  test_controller_wr_allow_surplus_export.py  test_debug_traces.py  test_devices_repo.py  test_diagnostics_export.py  test_executor_dispatcher.py  test_executor_rate_limiter.py  test_generic_drossel_params.py  test_health.py  test_hoymiles_drossel_params.py  test_latency_repo.py  test_main_lifespan_battery_pool.py  test_marstek_venus_default_capacity.py  test_marstek_venus_speicher_params.py  test_middleware.py  test_migrate.py  test_migration_004_export_mode.py  test_readback.py  (+7 more)
(+178 files in other folders)
